# gophish-api-client-python

./: pyproject.toml
gophish/: models.py
