[tool.poetry]
name = "gophish"
version = "0.6.0"
description = "Python API Client for Gophish"
authors = ["Jordan Wright <python@getgophish.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gophish/api-client-python"
repository = "https://github.com/gophish/api-client-python"
keywords = ["gophish"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
]

[tool.poetry.dependencies]
python = "^3.11"
appdirs = "^1.4.4"
certifi = "^2024.7.4"
chardet = "^5.2.0"
idna = "^3.7"
packaging = "^24.1"
pyparsing = "^3.1.2"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
six = "^1.16.0"
urllib3 = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
